# moderncli

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .woodpecker.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FEATURES.md  README.md  moderncli.pc.in  vcpkg.json
cmake/: cppcheck.arg  cppcheck.cfg  features.cmake  linting.cmake  project.cmake
src/: args.hpp  array.hpp  atomics.hpp  audiofile.hpp  bignum.hpp  binary.hpp  cipher.hpp  datetime.hpp  digest.hpp  eckey.hpp  encoding.hpp  endian.hpp  expected.hpp  filesystem.hpp  funcs.hpp  hash.hpp  keyfile.hpp  list.hpp  map.hpp  memory.hpp  monadic.hpp  output.hpp  print.hpp  process.hpp  random.hpp  ranges.hpp  scan.hpp  secure.hpp  select.hpp  serial.hpp  sign.hpp  slice.hpp  socket.hpp  stream.hpp  strings.hpp  sync.hpp  tasks.hpp  templates.hpp  x509.hpp
test/: array.cpp  atomics.cpp  audiofile.cpp  bignum.cpp  binary.cpp  cipher.cpp  compiler.hpp  cpp20.cpp  cpp23.cpp  digest.cpp  ecdsa.cpp  endian.cpp  expected.cpp  funcs.cpp  hash.cpp  keyfile.cpp  list.cpp  map.cpp  monads.cpp  output.cpp  process.cpp  random.cpp  ranges.cpp  scan.cpp  select.cpp  serial.cpp  shell.cpp  slice.cpp  socket.cpp  stream.cpp  strings.cpp  sync.cpp  tasks.cpp  test.conf
